syntax = "proto3";

package tritium;

import "google/protobuf/any.proto";


enum ErrorType {
    ENGINE = 0;

    CACHE = 1;

    EXECUTOR = 2;

    CLIENT = 3;
}

message Error {
    ErrorType type = 1;

    optional uint64 code = 2;

    optional string description = 3;

    repeated google.protobuf.Any context = 4;
}

